terminado el html

--- a/postcard/index.html
+++ b/postcard/index.html
@@ -32,15 +32,16 @@
                     </div>
                     <div class="lado_derecho">
                         <div class="formulario">
-                            <form>
-                                <label for="name"></label>
-
-                            </form>
+                            <input type="text" name="nombre" id="nombre" placeholder="Some Name">
+                            <input type="text" name="correo" id="correo" placeholder="Some email">
+                            <input type="text" name="comentario" id="comentario" placeholder="Some comment">
                         </div>
                     </div>
                 </div>
                 <div class="seccion_3">
-                    
+                    <div class="botom">
+                        <input type="button" value="Send my postcard">
+                    </div>
                 </div>
             </div>
         </div>
