--- a/postcard/index.html
+++ b/postcard/index.html
@@ -18,16 +18,16 @@
                         </h1>
                     </div>
                     <div class="logo">
-                        <img src="http://assets.breatheco.de/apis/img/icon/4geeks.png">
+                        <img class="img" src="http://assets.breatheco.de/apis/img/icon/4geeks.png">
                     </div>
                 </div>
                 <div class="seccion_2">
                     <div class="lado_izquierdo">
                         <div class="p_1">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ipsa enim reprehenderit, neque maxime, omnis explicabo eaque doloremque odio dolor, soluta sequi. Voluptate quam magnam autem ut praesentium assumenda dolore!</p>
+                            <p>Look how awesome! This is a PostCard that I created using HTML5 and CSS3 during my 4Geeks Academy Course!</p>
                         </div>
                         <div class="p_2">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, amet alias soluta in unde praesentium modi tenetur quo sequi suscipit earum fugit porro odio. Eaque et molestias velit repudiandae. Autem.</p>
+                            <p>This is so cool, can't wait to star doing more stuff</p>
                         </div>
                     </div>
                     <div class="lado_derecho">
