terminado_a_esperar_revision

--- a/postcard/index.html
+++ b/postcard/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Postcard</title>
     <link rel="stylesheet" href="/postcard/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="nada">
@@ -32,9 +35,9 @@
                     </div>
                     <div class="lado_derecho">
                         <div class="formulario">
-                            <input type="text" name="nombre" id="nombre" placeholder="Some Name">
-                            <input type="text" name="correo" id="correo" placeholder="Some email">
-                            <input type="text" name="comentario" id="comentario" placeholder="Some comment">
+                            <input class="formulario_1" type="text" name="correo" id="correo" placeholder="Some email">
+                            <input class="formulario_1" type="text" name="nombre" id="nombre" placeholder="Some Name">
+                            <input class="formulario_1" type="text" name="comentario" id="comentario" placeholder="Some comment">
                         </div>
                     </div>
                 </div>
